<resources>
        <string name="app_name">CalculatorAndroidDev</string>
        <string name="result">0</string>
        <string name="no1_text">1</string>
        <string name="no_2text">2</string>
        <string name="no_3text">3</string>
        <string name="no_4text">4</string>
        <string name="no_5text">5</string>
        <string name="no_6text">6</string>
        <string name="no_7text">7</string>
        <string name="no_8text">8</string>
        <string name="no_9text">9</string>
        <string name="no_0text">0</string>
        <string name="negposSymbols">+/-</string>
        <string name="equalsSign">=</string>
        <string name="addSign">+</string>
        <string name="subtractionSign">-</string>
        <string name="multiplySign">*</string>
        <string name="divideSign">/</string>
        <string name="clearSign">C</string>
        <string name="backspaceSign">BackSpace</string>
        <string name="sqrtbtn">sqrt</string>
</resources>
